tests/integration/features/project_statistics/91_user_provided_statistics_wrong_module/test.itest
RUN: cd %S/
RUN: %expect_exit 1 %strictdoc export %S --output-dir %T | filecheck %s
CHECK: error: Could not import a user-provided statistics generator: No module named 'statistics_generator'.
